<resources>
    <string name="app_name">FirebaseImageFeed</string>
    <string name="enter_email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="view_image_feeds">View image feeds</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="update_profile_picture">Update profile picture</string>
    <string name="logout">Logout</string>
    <string name="upload_image">Upload image</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="sign_up">or, Sign up</string>
    <string name="upload_from_gallery">Upload from Gallery</string>
    <string name="post">Post</string>
    <string name="no_user_images">This user has no images</string>
    <string name="users">Users</string>
    <string name="upload">Upload</string>
    <string name="currentuser">CurrentUser</string>
</resources>
