<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnUploadFromGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_from_gallery"
        android:drawableLeft="@drawable/ic_access_gallery"
        android:drawableStart="@drawable/ic_access_gallery"
        />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/btnPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:drawableLeft="@drawable/ic_upload_image"
        android:drawableStart="@drawable/ic_upload_image"
        />

    <Button
        android:id="@+id/btnUpdateProfilePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_profile_picture"
        android:drawableLeft="@drawable/ic_update_profile_picture"
        android:drawableStart="@drawable/ic_update_profile_picture"/>

</LinearLayout>